updating Deployment settings

--- a/docs/02-Getting Started 🚀/01-intro.mdx
+++ b/docs/02-Getting Started 🚀/01-intro.mdx
@@ -29,7 +29,7 @@ Each language section in the sidebar contains example scripts and usage guides. 
 - [C++](docs/c++/intro) 💻
 - [Java](docs/java/intro) ☕
 - [Shell](docs/shell/intro) 🐚
-- [Python](docs/pytohn/intro) 🐍
+- [Python](docs/Documentation/Python/01-intro.md) 🐍
 - [JavaScript](docs/javascript/intro) 🌟
 
 
